# SafeCREW-T4.1-NOM-anthropogenic-impact

./: .gitignore  README.md  pyproject.toml
safecrew_t4/berlin/: 1-preprocessing.ipynb  2-trend-analysis.ipynb  3-segmented-reg-analysis-305.ipynb  4-segmented-reg-analysis-325.ipynb
safecrew_t4/tarragona/: 1-preprocessing.ipynb  2-analysis.ipynb  2-trend-analysis.ipynb
