[tool.poetry]
name = "safecrew-t4-1-nom-anthropogenic-impact"
version = "0.1.0"
description = ""
authors = ["Massimiliano Arca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "safecrew_t4"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
