[tool.poetry]
name = "safecrew-t4-1-nom-anthropogenic-impact"
version = "0.1.0"
description = ""
authors = ["Massimiliano Arca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "safecrew_t4"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
prophet = "^1.1.6"
plotly = "^6.0.1"
pymannkendall = "^1.4.3"
piecewise-regression = "^1.5.0"
tqdm = "^4.67.1"
flake8 = "^7.1.2"
black = {extras = ["jupyter"], version = "^25.1.0"}
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
